--- a/assets/style.css
+++ b/assets/style.css
@@ -142,7 +142,7 @@ img {
 img:hover {
     transform: scale(1.05);
     transition: transform 0.5s ease;
-    /* cursor: pointer; */
+    cursor: pointer;
 }
 
 
@@ -319,6 +319,76 @@ footer {
 }
 
 
+/* lightbox */
+.lightbox {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(114, 114, 114, 0.9);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  cursor: pointer;
+}
+
+.lightbox img {
+  max-width: 90%;
+  max-height: 90%;
+  border-radius: 12px;
+  border: 4px solid #fff8d2;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.285);
+  transition: transform 0.3s ease;
+}
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 2em;
+  /* background: rgba(255, 255, 255, 0.85); */
+  background:none;
+  border: none;
+  padding: 0.3em 0.6em;
+  cursor: pointer;
+  border-radius: 50%;
+  z-index: 10000;
+}
+
+.left-arrow {
+  left: 20px;
+}
+
+.right-arrow {
+  right: 20px;
+}
+
+.arrow:hover {
+  background: #fffcea48;
+}
+
+/* close button */
+
+.close-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  font-size: 1.5em;
+  /* background: rgba(255, 255, 255, 0.85); */
+  background:none;
+  border: none;
+  padding: 0.3em 0.6em;
+  cursor: pointer;
+  border-radius: 50%;
+  z-index: 10001;
+  transition: background 0.2s ease;
+}
+
+.close-btn:hover {
+  background: #fffcea48;
+}
 
 
 /* back to top button */
