--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Domine:wght@400..700&family=Geist:wght@100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+html {
+  scroll-behavior: smooth;
+}
 
 body,
 .grid {
